content/docs/v1.5/quickstart/index.mdx
---
title: "Quick start"
description: "Deploy Drydock with Docker using a socket proxy or direct mount."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

## Run the Docker image

To get started, deploy the official _**drydock**_ image:

<Tabs items={["Socket Proxy (Recommended)", "Direct Mount", "Docker CLI"]}>
<Tab value="Socket Proxy (Recommended)">
Using a socket proxy is the most secure way to expose the Docker API. The proxy limits which endpoints Drydock can access.

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    container_name: drydock
    depends_on:
      socket-proxy:
        condition: service_healthy
    environment:
      - DD_WATCHER_LOCAL_HOST=socket-proxy
      - DD_WATCHER_LOCAL_PORT=2375
      - DD_AUTH_BASIC_ADMIN_USER=admin
      - "DD_AUTH_BASIC_ADMIN_HASH=argon2id$$65536$$3$$4$$H/LzIyo+5tbepUCiuRU2bFai+nbf+y/ZjMYH7h+vf1g=$$GeCkn8cI/+DbKXUiPydlqKUvj5Ujb4wL5sUkSm83rQWyIejvWoejrk6zWmQ2x5an7qvSHYL9gZHpibCXAJNdYw=="
      # - DD_SERVER_TRUSTPROXY=1  # uncomment if a TLS-terminating reverse proxy sits in front of Drydock
    ports:
      - 3000:3000

  socket-proxy:
    image: tecnativa/docker-socket-proxy
    container_name: drydock-socket-proxy
    labels:
      - dd.watch=true
      - dd.update.mode=infrastructure
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
      - SERVICES=1
      - INFO=1          # Required for daemon identity detection (notification prefixes)
      # Add POST=1 for container actions (start/stop/restart) or auto-updates
      # Add NETWORKS=1 if using the Docker trigger for auto-updates
    healthcheck:
      test: wget --spider http://localhost:2375/version || exit 1
      interval: 5s
      timeout: 3s
      retries: 3
      start_period: 5s
    restart: unless-stopped
```

</Tab>
<Tab value="Direct Mount">

<Callout type="warn">Direct socket access grants the container full control over the Docker daemon. Use the **Socket Proxy** tab above for production deployments. See [Docker Socket Security](/docs/configuration/watchers#docker-socket-security) for all available options.</Callout>

The simplest setup — mount the Docker socket directly. Works out of the box on most systems.

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    container_name: drydock
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      - DD_AUTH_BASIC_ADMIN_USER=admin
      - "DD_AUTH_BASIC_ADMIN_HASH=argon2id$$65536$$3$$4$$H/LzIyo+5tbepUCiuRU2bFai+nbf+y/ZjMYH7h+vf1g=$$GeCkn8cI/+DbKXUiPydlqKUvj5Ujb4wL5sUkSm83rQWyIejvWoejrk6zWmQ2x5an7qvSHYL9gZHpibCXAJNdYw=="
      # - DD_SERVER_TRUSTPROXY=1  # uncomment if a TLS-terminating reverse proxy sits in front of Drydock
    ports:
      - 3000:3000
```

<Callout type="info">If you need a **read-only** socket mount (`:ro`), break-glass root mode requires both `DD_RUN_AS_ROOT=true` and `DD_ALLOW_INSECURE_ROOT=true`. Prefer socket proxy mode for least privilege. See [Docker Socket Security](/docs/configuration/watchers#docker-socket-security) for details.</Callout>
</Tab>
<Tab value="Docker CLI">

<Callout type="warn">Direct socket access grants the container full control over the Docker daemon. Use the **Socket Proxy** tab above for production deployments. See [Docker Socket Security](/docs/configuration/watchers#docker-socket-security) for all available options.</Callout>

```bash
docker run -d --name drydock \
  -v "/var/run/docker.sock:/var/run/docker.sock" \
  -e DD_AUTH_BASIC_ADMIN_USER=admin \
  -e 'DD_AUTH_BASIC_ADMIN_HASH=argon2id$65536$3$4$H/LzIyo+5tbepUCiuRU2bFai+nbf+y/ZjMYH7h+vf1g=$GeCkn8cI/+DbKXUiPydlqKUvj5Ujb4wL5sUkSm83rQWyIejvWoejrk6zWmQ2x5an7qvSHYL9gZHpibCXAJNdYw==' \
  -p 3000:3000 \
  codeswhat/drydock:v1.5.2
```

</Tab>
</Tabs>

The official image is published on Docker Hub and GitHub Container Registry.

<Callout type="warn">Authentication is **required by default** on fresh installs. The examples above use Basic auth with username `admin` and password `password`. See the [auth docs](/docs/configuration/authentications) for OIDC, anonymous access, and other options.</Callout>

<Callout type="warn">**Behind a reverse proxy?** If a TLS-terminating reverse proxy (Nginx Proxy Manager, Traefik, Caddy, Synology DSM, etc.) sits in front of Drydock, set `DD_SERVER_TRUSTPROXY=1` (the number of proxy hops) — otherwise every manual action in the UI fails with `403 CSRF validation failed`. See [the FAQ](/docs/faq#csrf-validation-failed-403-behind-a-reverse-proxy) for details.</Callout>

## Migrating from WUD

If you are coming from What's Up Docker, you can switch images and keep your existing config (`WUD_*` env vars and `wud.*` labels still work).

To rewrite your local config to drydock naming (`DD_*` and `dd.*`), run:

```bash
# preview changes only
docker exec -it drydock node dist/index.js config migrate --dry-run

# apply changes to specific files
docker exec -it drydock node dist/index.js config migrate --file .env --file compose.yaml
```

`config migrate` reads/writes only local files in your deployment. It does not send usage data to external services.

## Open the UI

[Open the UI](http://localhost:3000) in a browser and check that everything is working as expected.

## First 5 minutes in the UI

1. Open the command palette with `Cmd/Ctrl+K`.
2. Use prefix scopes to narrow search quickly:
   - `/` pages
   - `@` runtime resources (containers, agents, triggers, watchers)
   - `#` config resources (registries, auth, notifications, settings)
3. Leave the query empty to use recent results.
4. Open **Notifications** and tune event rules (`update-available`, `update-applied`, `update-failed`, `security-alert`, `agent-disconnect`) plus trigger assignments.
5. Reorder dashboard widgets by drag/drop; layout persists locally and can be reset.

Keyboard shortcuts: `Enter` confirms action dialogs, `Escape` cancels dialogs and closes detail panels.

## Next steps

- [**Getting started guide**](/docs/getting-started) — step-by-step walkthrough from watching containers to notifications and auto-updates.
- [**Add some triggers**](/docs/configuration/triggers) to get notified or auto-update containers.
- [**Configure watchers**](/docs/configuration/watchers) to fine-tune how drydock monitors your containers.
- [**Multi-host monitoring**](/docs/configuration/agents) — run lightweight agents on remote hosts and aggregate them into one UI.
- [**Integrate other registries**](/docs/configuration/registries) (ECR, GCR, GHCR, and more).
- See a **[complete configuration example](/docs/configuration/#complete-example)** illustrating common drydock options.
